调整蜡烛线保存顺序，时间考靠前的在前面，发送的时候也是按照这个顺序，客户端读取也先读取到时间靠前的数据